# SnakC

./: CMakeLists.txt  README.md  apple.c  main.c  render.c  snake.c  snake.h
headers/: apple.h  render.h  snake.h
src/: apple.c  render.c  snake.c
